force-app/main/default/objects/CountryPhoneCode__mdt/CountryPhoneCode__mdt.object-meta.xml
<CustomObject>
    <label>CountryPhoneCode</label>
    <pluralLabel>CountryPhoneCode</pluralLabel>
</CustomObject>