force-app/main/default/objects/CountryPhoneCode__mdt/fields/CountryCallingCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCallingCode__c</fullName>
    <label>CountryCallingCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>