force-app/main/default/objects/CountryPhoneCode__mdt/fields/FirstDigit__c.field-meta.xml
<CustomField>
    <fullName>FirstDigit__c</fullName>
    <label>FirstDigit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>