force-app/main/default/objects/CountryPhoneCode__mdt/fields/RemoveFirstDigit__c.field-meta.xml
<CustomField>
    <fullName>RemoveFirstDigit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RemoveFirstDigit</label>
    <type>Checkbox</type>
</CustomField>